<resources>
    <string name="app_name">Craft Cellar</string>
    <string name="action_settings">Settings</string>

    <string name="email_request">Email</string>
    <string name="password_request">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="register_button">Register</string>

    <string name="beverage_brand">Brand</string>
    <string name="beverage_title">Title</string>
    <string name="beverage_year">Year</string>
    <string name="beverage_abv">Alcohol</string>
    <string name="beverage_description">Description</string>
    <string name="beverage_style">Style</string>
    <string name="beverage_rating">Rating</string>
    <string name="beverage_type">Type</string>
    <string name="beverage_location">Location</string>

    <string name="edit_confirm">Confirm</string>
    <string name="edit_cancel">Cancel</string>
    <string name="delete">Delete</string>

    <!-- Register Fragment -->
    <string name="register_username">Username</string>

    <!-- menu -->
    <string name="log_out">Log out</string>


    <!--Log in status-->
    <string name="LOGIN_PREFS"> edu.uw.tacoma.team3.CraftCellar.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <!--log in data stored-->
    <string name="LOGIN_FILE"> edu.uw.tacoma.yyang3.CraftCellar.LOGIN_FILE</string>
    <string name="LOGIN_USERNAME"> edu.uw.tacoma.yyang3.CraftCellar.LOGIN_USER</string>

    <string name="email_to">Email to</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="share">Share</string>

</resources>
